@@ -1,30 +1,30 @@
 /**
  * License Agreement.
- * <p>
- * JBoss RichFaces - Ajax4jsf Component Library
- * <p>
+ *
+ *  JBoss RichFaces - Ajax4jsf Component Library
+ *
  * Copyright (C) 2007  Exadel, Inc.
- * <p>
+ *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
  * License version 2.1 as published by the Free Software Foundation.
- * <p>
+ *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
- * <p>
+ *
  * You should have received a copy of the GNU Lesser General Public
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
  */
 package org.richfaces.component;
 
-import org.richfaces.component.util.MessageUtil;
-
 import jakarta.faces.application.FacesMessage;
 import jakarta.faces.component.UIInput;
 import jakarta.faces.context.FacesContext;
+
+import org.richfaces.component.util.MessageUtil;
 
 /**
  * @author Nick - mailto:nbelaevski@exadel.com created 20.02.2007
@@ -115,6 +115,6 @@ public abstract class UIRangedNumberInput extends UIInput {
             return null;
         }
 
-        return new Double(object.toString());
+        return Double.valueOf(object.toString());
     }
 }
