@@ -1,9 +1,9 @@
 package org.richfaces.component;
 
+import java.math.BigDecimal;
+
 import org.richfaces.log.Logger;
 import org.richfaces.log.RichfacesLogger;
-
-import java.math.BigDecimal;
 
 public final class NumberUtils {
     private static final Logger LOGGER = RichfacesLogger.COMPONENTS.getLogger();
@@ -22,16 +22,17 @@ public final class NumberUtils {
         Number result = null;
         if (v != null) {
             try {
-                if (v instanceof String) { // String
+                if (v instanceof String) { 
+                	// String
                     result = Double.parseDouble((String) v);
                 } else {
                     Number n = (Number) v;
-                    if ((n instanceof BigDecimal) || (n instanceof Double) // Double
-                            // or
-                            // BigDecimal
-                            || (n instanceof Float)) {
+                    if ((n instanceof BigDecimal) || (n instanceof Double) 
+                        || (n instanceof Float)) {
+                    	// Double or BigDecimal
                         result = n.floatValue();
-                    } else if (n instanceof Integer || n instanceof Long) { // Integer
+                    } else if (n instanceof Integer || n instanceof Long) { 
+                    	// Integer
                         result = n.longValue();
                     }
                 }
@@ -40,6 +41,6 @@ public final class NumberUtils {
             }
             return result;
         }
-        return new Integer(0);
+        return Integer.valueOf(0);
     }
 }
