@@ -1,34 +1,19 @@
 package org.richfaces.javascript.client.converter;
 
-import org.junit.runners.Parameterized.Parameters;
-import org.richfaces.javascript.client.RunParameters;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+
+import java.util.List;
 
 import jakarta.faces.convert.ByteConverter;
 import jakarta.faces.convert.Converter;
-import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import org.junit.runners.Parameterized.Parameters;
+import org.richfaces.javascript.client.RunParameters;
 
 public class ByteConverterTest extends ConverterTestBase {
     public ByteConverterTest(RunParameters criteria) {
         super(criteria);
-    }
-
-    @Parameters
-    public static List<RunParameters[]> getRunParameterss() {
-        return options(
-                pass("true"),
-                pass("ok"),
-                pass("123"),
-                pass("0"),
-                pass("1"),
-                pass("255"),
-                pass("-128"),
-                pass("-129"),
-                pass("256"),
-                pass("-0"),
-                pass("0.05"));
     }
 
     @Override
@@ -47,7 +32,23 @@ public class ByteConverterTest extends ConverterTestBase {
         assertTrue(jsConvertedValue instanceof Double);
         assertTrue(convertedValue instanceof Byte);
         Double jsDouble = (Double) jsConvertedValue;
-        Double jsfDouble = new Double((Byte) convertedValue);
+        Double jsfDouble = Double.valueOf((Byte) convertedValue);
         assertEquals(jsfDouble, jsDouble, 0.0000001);
+    }
+
+    @Parameters
+    public static List<RunParameters[]> getRunParameterss() {
+        return options(
+                pass("true"),
+                pass("ok"),
+                pass("123"),
+                pass("0"),
+                pass("1"),
+                pass("255"),
+                pass("-128"),
+                pass("-129"),
+                pass("256"),
+                pass("-0"),
+                pass("0.05"));
     }
 }
