@@ -21,10 +21,10 @@
  */
 package org.richfaces.resource.optimizer.faces;
 
-import jakarta.faces.el.MethodBinding;
-import jakarta.faces.el.PropertyResolver;
-import jakarta.faces.el.ValueBinding;
-import jakarta.faces.el.VariableResolver;
+import java.util.Collection;
+import java.util.Iterator;
+import java.util.Locale;
+
 import org.richfaces.application.ServiceTracker;
 
 import jakarta.el.ELException;
@@ -42,19 +42,17 @@ import jakarta.faces.context.FacesContext;
 import jakarta.faces.convert.Converter;
 import jakarta.faces.event.ActionListener;
 import jakarta.faces.validator.Validator;
-import java.util.Collection;
-import java.util.Iterator;
-import java.util.Locale;
 
 /**
  * @author Nick Belaevski
+ *
  */
 public class ApplicationImpl extends Application {
     private ExpressionFactory expressionFactory = createExpressionFactory();
 
     private ExpressionFactory createExpressionFactory() {
         try {
-            return (ExpressionFactory) Class.forName("org.jboss.el.ExpressionFactoryImpl").newInstance();
+            return ExpressionFactory.newInstance(); //MZ (ExpressionFactory) Class.forName("jakarta.el.ExpressionFactory").getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new IllegalStateException(e);
         }
@@ -63,7 +61,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getActionListener()
+     * @see jakarta.faces.application.Application#getActionListener()
      */
     @Override
     public ActionListener getActionListener() {
@@ -74,7 +72,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setActionListener(javax.faces.event.ActionListener)
+     * @see jakarta.faces.application.Application#setActionListener(jakarta.faces.event.ActionListener)
      */
     @Override
     public void setActionListener(ActionListener listener) {
@@ -85,7 +83,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getDefaultLocale()
+     * @see jakarta.faces.application.Application#getDefaultLocale()
      */
     @Override
     public Locale getDefaultLocale() {
@@ -96,7 +94,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setDefaultLocale(java.util.Locale)
+     * @see jakarta.faces.application.Application#setDefaultLocale(java.util.Locale)
      */
     @Override
     public void setDefaultLocale(Locale locale) {
@@ -107,7 +105,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getDefaultRenderKitId()
+     * @see jakarta.faces.application.Application#getDefaultRenderKitId()
      */
     @Override
     public String getDefaultRenderKitId() {
@@ -118,7 +116,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setDefaultRenderKitId(java.lang.String)
+     * @see jakarta.faces.application.Application#setDefaultRenderKitId(java.lang.String)
      */
     @Override
     public void setDefaultRenderKitId(String renderKitId) {
@@ -129,7 +127,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getMessageBundle()
+     * @see jakarta.faces.application.Application#getMessageBundle()
      */
     @Override
     public String getMessageBundle() {
@@ -140,7 +138,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setMessageBundle(java.lang.String)
+     * @see jakarta.faces.application.Application#setMessageBundle(java.lang.String)
      */
     @Override
     public void setMessageBundle(String bundle) {
@@ -151,7 +149,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getNavigationHandler()
+     * @see jakarta.faces.application.Application#getNavigationHandler()
      */
     @Override
     public NavigationHandler getNavigationHandler() {
@@ -162,7 +160,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setNavigationHandler(javax.faces.application.NavigationHandler)
+     * @see jakarta.faces.application.Application#setNavigationHandler(jakarta.faces.application.NavigationHandler)
      */
     @Override
     public void setNavigationHandler(NavigationHandler handler) {
@@ -173,55 +171,63 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getPropertyResolver()
+     * @see jakarta.faces.application.Application#getPropertyResolver()
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public PropertyResolver getPropertyResolver() {
+    public jakarta.faces.el.PropertyResolver getPropertyResolver() {
         // TODO Auto-generated method stub
         return null;
     }
+    */
 
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setPropertyResolver(javax.faces.el.PropertyResolver)
+     * @see jakarta.faces.application.Application#setPropertyResolver(jakarta.faces.el.PropertyResolver)
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public void setPropertyResolver(PropertyResolver resolver) {
+    public void setPropertyResolver(jakarta.faces.el.PropertyResolver resolver) {
         // TODO Auto-generated method stub
 
     }
+    */
 
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getVariableResolver()
+     * @see jakarta.faces.application.Application#getVariableResolver()
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public VariableResolver getVariableResolver() {
+    public jakarta.faces.el.VariableResolver getVariableResolver() {
         // TODO Auto-generated method stub
         return null;
     }
+    */
 
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setVariableResolver(javax.faces.el.VariableResolver)
+     * @see jakarta.faces.application.Application#setVariableResolver(jakarta.faces.el.VariableResolver)
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public void setVariableResolver(VariableResolver resolver) {
+    public void setVariableResolver(jakarta.faces.el.VariableResolver resolver) {
         // TODO Auto-generated method stub
 
     }
+    */
 
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getViewHandler()
+     * @see jakarta.faces.application.Application#getViewHandler()
      */
     @Override
     public ViewHandler getViewHandler() {
@@ -232,7 +238,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setViewHandler(javax.faces.application.ViewHandler)
+     * @see jakarta.faces.application.Application#setViewHandler(jakarta.faces.application.ViewHandler)
      */
     @Override
     public void setViewHandler(ViewHandler handler) {
@@ -243,7 +249,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getStateManager()
+     * @see jakarta.faces.application.Application#getStateManager()
      */
     @Override
     public StateManager getStateManager() {
@@ -254,7 +260,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setStateManager(javax.faces.application.StateManager)
+     * @see jakarta.faces.application.Application#setStateManager(jakarta.faces.application.StateManager)
      */
     @Override
     public void setStateManager(StateManager manager) {
@@ -265,7 +271,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#addComponent(java.lang.String, java.lang.String)
+     * @see jakarta.faces.application.Application#addComponent(java.lang.String, java.lang.String)
      */
     @Override
     public void addComponent(String componentType, String componentClass) {
@@ -276,7 +282,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createComponent(java.lang.String)
+     * @see jakarta.faces.application.Application#createComponent(java.lang.String)
      */
     @Override
     public UIComponent createComponent(String componentType) throws FacesException {
@@ -287,21 +293,23 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createComponent(javax.faces.el.ValueBinding, javax.faces.context.FacesContext,
+     * @see jakarta.faces.application.Application#createComponent(jakarta.faces.el.ValueBinding, jakarta.faces.context.FacesContext,
      * java.lang.String)
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public UIComponent createComponent(ValueBinding componentBinding, FacesContext context, String componentType)
+    public UIComponent createComponent(jakarta.faces.el.ValueBinding componentBinding, FacesContext context, String componentType)
             throws FacesException {
         // TODO Auto-generated method stub
         return null;
     }
+    */
 
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getComponentTypes()
+     * @see jakarta.faces.application.Application#getComponentTypes()
      */
     @Override
     public Iterator<String> getComponentTypes() {
@@ -312,7 +320,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#addConverter(java.lang.String, java.lang.String)
+     * @see jakarta.faces.application.Application#addConverter(java.lang.String, java.lang.String)
      */
     @Override
     public void addConverter(String converterId, String converterClass) {
@@ -323,7 +331,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#addConverter(java.lang.Class, java.lang.String)
+     * @see jakarta.faces.application.Application#addConverter(java.lang.Class, java.lang.String)
      */
     @Override
     public void addConverter(Class<?> targetClass, String converterClass) {
@@ -334,7 +342,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createConverter(java.lang.String)
+     * @see jakarta.faces.application.Application#createConverter(java.lang.String)
      */
     @Override
     public Converter createConverter(String converterId) {
@@ -345,7 +353,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createConverter(java.lang.Class)
+     * @see jakarta.faces.application.Application#createConverter(java.lang.Class)
      */
     @Override
     public Converter createConverter(Class<?> targetClass) {
@@ -356,7 +364,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getConverterIds()
+     * @see jakarta.faces.application.Application#getConverterIds()
      */
     @Override
     public Iterator<String> getConverterIds() {
@@ -367,7 +375,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getConverterTypes()
+     * @see jakarta.faces.application.Application#getConverterTypes()
      */
     @Override
     public Iterator<Class<?>> getConverterTypes() {
@@ -378,19 +386,21 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createMethodBinding(java.lang.String, java.lang.Class<?>[])
+     * @see jakarta.faces.application.Application#createMethodBinding(java.lang.String, java.lang.Class<?>[])
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public MethodBinding createMethodBinding(String ref, Class<?>[] params) throws javax.faces.el.ReferenceSyntaxException {
+    public jakarta.faces.el.MethodBinding createMethodBinding(String ref, Class<?>[] params) throws jakarta.faces.el.ReferenceSyntaxException {
         // TODO Auto-generated method stub
         return null;
     }
+    */
 
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getSupportedLocales()
+     * @see jakarta.faces.application.Application#getSupportedLocales()
      */
     @Override
     public Iterator<Locale> getSupportedLocales() {
@@ -401,7 +411,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#setSupportedLocales(java.util.Collection)
+     * @see jakarta.faces.application.Application#setSupportedLocales(java.util.Collection)
      */
     @Override
     public void setSupportedLocales(Collection<Locale> locales) {
@@ -412,7 +422,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#addValidator(java.lang.String, java.lang.String)
+     * @see jakarta.faces.application.Application#addValidator(java.lang.String, java.lang.String)
      */
     @Override
     public void addValidator(String validatorId, String validatorClass) {
@@ -423,7 +433,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createValidator(java.lang.String)
+     * @see jakarta.faces.application.Application#createValidator(java.lang.String)
      */
     @Override
     public Validator createValidator(String validatorId) throws FacesException {
@@ -434,7 +444,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getValidatorIds()
+     * @see jakarta.faces.application.Application#getValidatorIds()
      */
     @Override
     public Iterator<String> getValidatorIds() {
@@ -445,14 +455,16 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#createValueBinding(java.lang.String)
+     * @see jakarta.faces.application.Application#createValueBinding(java.lang.String)
      */
+    /*MZ
     @SuppressWarnings("deprecation")
     @Override
-    public ValueBinding createValueBinding(String ref) throws javax.faces.el.ReferenceSyntaxException {
+    public jakarta.faces.el.ValueBinding createValueBinding(String ref) throws jakarta.faces.el.ReferenceSyntaxException {
         // TODO Auto-generated method stub
         return null;
     }
+    */
 
     @Override
     public ProjectStage getProjectStage() {
@@ -462,7 +474,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getExpressionFactory()
+     * @see jakarta.faces.application.Application#getExpressionFactory()
      */
     @Override
     public ExpressionFactory getExpressionFactory() {
@@ -472,7 +484,7 @@ public class ApplicationImpl extends Application {
     /*
      * (non-Javadoc)
      *
-     * @see javax.faces.application.Application#getResourceHandler()
+     * @see jakarta.faces.application.Application#getResourceHandler()
      */
     @Override
     public ResourceHandler getResourceHandler() {
